<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.dialerapp.view.dialer.DialerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:weightSum="10"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"/>
            <ImageView
                android:id="@+id/imgDelete"
                android:src="@drawable/ic_baseline_clear_24"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/btnOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/one"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/three"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/btnFour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/four"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/five"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnSix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/six"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/btnSeven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/seven"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnEight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/eight"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnNine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nine"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:weightSum="3">
            <Button
                android:id="@+id/btnStar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/star"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/two"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
            <Button
                android:id="@+id/btnHash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hash"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="8dp"/>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCall"
            android:contentDescription="@string/call"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/ic_baseline_call_24"/>

    </LinearLayout>
</layout>